--- a/market.html
+++ b/market.html
@@ -13,7 +13,7 @@
 
     <header class="header">
 
-        <p>Товари на які діє знижка</p>
+        <p>Товари наваівпа які діє знижка</p>
 
     </header>
 
